--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- <link rel="stylesheet" href="../app/scss/style.scss" /> -->
 
     <!-- to je uporabila zena  -->
-    <link rel="stylesheet" href="../dist/style.css"/>
+    <link rel="stylesheet" href="app/scss/style.css"/>
 
   </head>
   <body>
