--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <div class="overlay has-fade"></div>
       <nav class="container container--pall flex flex-jc-sb flex-ai-c">
         <a href="/" class="header__logo">
-          <img src="../images/logo.svg" alt="Easybank" />
+          <img src="images/logo.svg" alt="Easybank" />
         </a>
         <a id="btnHamburger" href="#" class="header__toggle hide-for-desktop">
           <span></span>
@@ -76,7 +76,7 @@
         <div class="feature__grid">
           <div class="feature__item">
             <div class="feature__icon">
-              <img src="../images/icon-online.svg" alt="" />
+              <img src="images/icon-online.svg" alt="" />
             </div>
             <div class="feature__title">Online Banking</div>
             <div class="feature__description">
@@ -87,7 +87,7 @@
 
           <div class="feature__item">
             <div class="feature__icon">
-              <img src="../images/icon-budgeting.svg" alt="" />
+              <img src="images/icon-budgeting.svg" alt="" />
             </div>
             <div class="feature__title">Simple Budgeting</div>
             <div class="feature__description">
@@ -98,7 +98,7 @@
 
           <div class="feature__item">
             <div class="feature__icon">
-              <img src="../images/icon-onboarding.svg" alt="" />
+              <img src="images/icon-onboarding.svg" alt="" />
             </div>
             <div class="feature__title">Fast Onboarding</div>
             <div class="feature__description">
@@ -109,7 +109,7 @@
 
           <div class="feature__item">
             <div class="feature__icon">
-              <img src="../images/icon-api.svg" alt="" />
+              <img src="images/icon-api.svg" alt="" />
             </div>
             <div class="feature__title">Open API</div>
             <div class="feature__description">
@@ -127,7 +127,7 @@
         <a class="article__grid">
 
           <a href="#"class="article__item">
-            <div class="article__image" style="background-image: url('../images/image-currency.jpg')"></div>
+            <div class="article__image" style="background-image: url('images/image-currency.jpg')"></div>
             <div class="article__text">
               <div class="article__author">By Claire Robinson</div>
               <div class="article__title">Receive money in any currency with no fees</div>
@@ -137,7 +137,7 @@
           </a>
 
           <a href="#"class="article__item">
-            <div class="article__image" style="background-image: url('../images/image-restaurant.jpg')"></div>
+            <div class="article__image" style="background-image: url('images/image-restaurant.jpg')"></div>
             <div class="article__text">
               <div class="article__author">By Wilson Hutton</div>
               <div class="article__title">Treat yourself without worrying about money</div>
@@ -147,7 +147,7 @@
           </a>
 
           <a href="#"class="article__item">
-            <div class="article__image" style="background-image: url('../images/image-plane.jpg')"></div>
+            <div class="article__image" style="background-image: url('images/image-plane.jpg')"></div>
             <div class="article__text">
               <div class="article__author">By Wilson Hutton</div>
               <div class="article__title">Take your Easybank card wherever you go</div>
@@ -157,7 +157,7 @@
           </a>
 
           <a href="#"class="article__item">
-            <div class="article__image" style="background-image: url('../images/image-confetti.jpg')"></div>
+            <div class="article__image" style="background-image: url('images/image-confetti.jpg')"></div>
             <div class="article__text">
               <div class="article__author">By Claire Robinson</div>
               <div class="article__title">Our invite-only Beta accounts are now live!</div>
@@ -172,7 +172,7 @@
     <footer class="footer">
       <div class="container">
         <a class="footer__logo" href="#">
-          <img src="../images/logo-dark.svg" />
+          <img src="images/logo-dark.svg" />
         </a>
   
         <div class="footer__social">
@@ -222,6 +222,6 @@
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Sead Softic</a>.
   </div>
-    <script src="../app/js/script.js"></script>
+    <script src="app/js/script.js"></script>
   </body>
 </html>
