--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <header class="header">
       <div class="overlay has-fade"></div>
       <nav class="container container--pall flex flex-jc-sb flex-ai-c">
-        <a href="/" class="header__logo">
+        <a href="#" class="header__logo">
           <img src="images/logo.svg" alt="Easybank" />
         </a>
         <a id="btnHamburger" href="#" class="header__toggle hide-for-desktop">
@@ -213,9 +213,6 @@
         </div>
 
       </div>
-
-      
-
 
     </footer>
   <div class="attribution">
